# developmental-robot-movement

./: .gitignore  CLAUDE.md  DIT_FAILURE_ANALYSIS.md  DIT_SYSTEMATIC_EXPLORATION.md  EXPERIMENT_SUMMARY.md  ITERATION_STATUS.md  README.md  SESSION_EXPLORER_GRADIO.md  _patch_auto_infer.py  _show_block.py  adaptive_world_model.py  all_camera_recording_tests.py  analyze_training_logs.py  attention_viz.py  autoencoder_concat_predictor_world_model.py  autoencoder_latent_predictor_world_model.py  camera_fps_diagnostics.py  check_iteration_ready.py  compare_dit_iterations.py  compare_dit_runs.py  compare_iter1_baseline_counterfactual.py  concat_world_model_explorer_gradio.py  config.py  continuous_replay.py  convert_lerobot_to_explorer.py  create_staged_splits.py  experiment_config.yaml  filter_validation_overlap.py  gpu_monitor.sh  jetbot_interface.py  jetbot_remote_client.py  jetbot_world_model_example.py  lr_sweep.py  models.py  multiheight_deconly_run10.yaml  multiheight_deconly_run12.yaml  multiheight_deconly_run12b.yaml  multiheight_deconly_run13_patch8.yaml  multiheight_deconly_run4.yaml  multiheight_deconly_run5.yaml  (+55 more)
concat_world_model_explorer/: __init__.py  __main__.py  app.py  attention.py  canvas_ops.py  checkpoint_manager.py  (+8 more)
lerobot_policy_simple_joint/: README.md  pyproject.toml
lerobot_policy_simple_joint/lerobot_policy_simple_joint/: __init__.py  base_joint_policy.py  configuration_multi_secondary_joint.py  configuration_simple_joint.py  modeling_multi_secondary_joint.py  modeling_simple_joint.py  processor_multi_secondary_joint.py  processor_simple_joint.py
(+25 files in other folders)
